# ADPTO-Project--Queens

./: CMakeLists.txt  README.md
adptoRaw/: CMakeLists.txt  adpto  adpto.cpp  main.cpp
doc/: main.aux  main.out  main.tex  main.toc
doc/images/: obs1.xcf  obs1a.xcf
generator/: generator.py  generator.tar
include/: Actions.h  Board.h  Debugging.h  Loader.h  Move.h  Postition.h  Queen.h  Solver.h  Tools.h
judge/: judge.py  t1.in  t1.out  t2.in  t2.out  t_other.in  t_other.out  test.bat
src/: Actions.cpp  Board.cpp  Loader.cpp  Queen.cpp  Solver.cpp  main.cpp
